man page translations: update Belarusian

--- a/doc/man/po4a/po/be.po
+++ b/doc/man/po4a/po/be.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2024-02-03 13:04+0100\n"
-"PO-Revision-Date: 2024-01-20 19:11+0100\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"Last-Translator: Prydespar <prydespar@gmail.com>, 2024\n"
 "Language-Team: Belarusian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/be/)\n"
 "Language: be\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,7 @@ msgstr "mkvextract"
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
 msgid "82.0"
-msgstr ""
+msgstr "82.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -35,7 +35,7 @@ msgstr ""
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2024-01-02"
-msgstr ""
+msgstr "2024-01-02"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5715,7 +5715,7 @@ msgstr " -- "
 #: doc/stylesheets/docbook-to-html.xsl:83
 #: doc/stylesheets/docbook-to-html.xsl:100
 msgid "Link to this heading"
-msgstr ""
+msgstr "Спасылка на гэты загаловак"
 
 #. type: Content of: <xsl:stylesheet><xsl:template><tr><td><xsl:choose><xsl:when><a>
 #: doc/stylesheets/docbook-to-html.xsl:83
@@ -5723,7 +5723,7 @@ msgstr ""
 #: doc/stylesheets/docbook-to-html.xsl:145
 #, no-wrap
 msgid "#"
-msgstr ""
+msgstr "#"
 
 #. type: Content of: <xsl:stylesheet><xsl:template><table><thead><tr><th>
 #: doc/stylesheets/docbook-to-html.xsl:130
@@ -5734,7 +5734,7 @@ msgstr "Параметр"
 #. type: Attribute 'title' of: <xsl:stylesheet><xsl:template><tr><td><xsl:choose><xsl:when><a>
 #: doc/stylesheets/docbook-to-html.xsl:145
 msgid "Link to this option"
-msgstr ""
+msgstr "Спасылка на гэты параметр"
 
 #. type: Content of: <xsl:stylesheet><xsl:template><xsl:choose><xsl:otherwise><a><xsl:text>
 #: doc/stylesheets/docbook-to-html.xsl:185
