man page translations: update Russian

--- a/doc/man/po4a/po/ru.po
+++ b/doc/man/po4a/po/ru.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2024-02-03 13:04+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: Andrei Stepanov, 2018-2024\n"
+"Last-Translator: solokot <solokot@gmail.com>, 2024\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -5719,7 +5719,7 @@ msgstr " -- "
 #: doc/stylesheets/docbook-to-html.xsl:83
 #: doc/stylesheets/docbook-to-html.xsl:100
 msgid "Link to this heading"
-msgstr ""
+msgstr "Ссылка на эту рубрику"
 
 #. type: Content of: <xsl:stylesheet><xsl:template><tr><td><xsl:choose><xsl:when><a>
 #: doc/stylesheets/docbook-to-html.xsl:83
@@ -5727,7 +5727,7 @@ msgstr ""
 #: doc/stylesheets/docbook-to-html.xsl:145
 #, no-wrap
 msgid "#"
-msgstr ""
+msgstr "#"
 
 #. type: Content of: <xsl:stylesheet><xsl:template><table><thead><tr><th>
 #: doc/stylesheets/docbook-to-html.xsl:130
@@ -5738,7 +5738,7 @@ msgstr "Параметр"
 #. type: Attribute 'title' of: <xsl:stylesheet><xsl:template><tr><td><xsl:choose><xsl:when><a>
 #: doc/stylesheets/docbook-to-html.xsl:145
 msgid "Link to this option"
-msgstr ""
+msgstr "Ссылка на эту функцию"
 
 #. type: Content of: <xsl:stylesheet><xsl:template><xsl:choose><xsl:otherwise><a><xsl:text>
 #: doc/stylesheets/docbook-to-html.xsl:185
