program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -7140,7 +7140,7 @@ msgstr "Как точка цвета расположена вертикальн
 #: src/mkvtoolnix-gui/merge/track_model.cpp:78
 #, no-c-format
 msgid "ID"
-msgstr "Идентификатор"
+msgstr "ИД"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2244
 #, no-c-format
