--- a/doc/man/po4a/po/de.po
+++ b/doc/man/po4a/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix\n"
 "Report-Msgid-Bugs-To: mo@bunkus.online\n"
-"POT-Creation-Date: 2024-02-03 13:04+0100\n"
+"POT-Creation-Date: 2024-03-10 19:13+0100\n"
 "PO-Revision-Date: 2024-02-03 13:05+0100\n"
 "Last-Translator: Moritz Bunkus <mo@bunkus.online>\n"
 "Language-Team: German <mo@bunkus.online>\n"
@@ -27,8 +27,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "82.0"
-msgstr "82.0"
+msgid "83.0"
+msgstr "83.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -36,7 +36,9 @@ msgstr "82.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-01-02"
+#, fuzzy
+#| msgid "2024-01-02"
+msgid "2024-03-10"
 msgstr "2024-01-02"
 
 #. type: Content of the mkvmerge entity
