--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-02-03 13:04+0100\n"
+"POT-Creation-Date: 2024-03-10 19:13+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2024\n"
 "Language-Team: French (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
@@ -32,8 +32,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "82.0"
-msgstr "82.0"
+msgid "83.0"
+msgstr "83.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -41,7 +41,9 @@ msgstr "82.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-01-02"
+#, fuzzy
+#| msgid "2024-01-02"
+msgid "2024-03-10"
 msgstr "2024-01-02"
 
 #. type: Content of the mkvmerge entity
