--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (83.0-0~bunkus01) mantic; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 10 Mar 2024 19:12:10 +0100
+
 mkvtoolnix (82.0-0~bunkus01) mantic; urgency=low
 
   * New version.
