--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-03-10 15:30+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2023\n"
+"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2024\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
 "Language: it\n"
@@ -10570,9 +10570,9 @@ msgstr "Lettore Quicktime/MP4: La traccia {0} manca di alcuni dati. Atom di inte
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:202
 #: src/mkvtoolnix-gui/util/settings.cpp:319
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Quit MKVToolNix"
-msgstr "&GUI MKVToolNix"
+msgstr "Esci da MKVToolNix"
 
 #: src/common/file_types.cpp:79
 #, no-c-format
@@ -16025,9 +16025,9 @@ msgid "extended language subtags form"
 msgstr "forma sottotag lingua estesi"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:204
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "ffmpeg metadata files"
-msgstr "Appendi file multimediali"
+msgstr "File metadati ffmpeg"
 
 #: src/merge/output_control.cpp:429
 #, no-c-format, c++-format
