program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-03-10 15:30+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: BouRock, 2016-2023\n"
+"Last-Translator: BouRock, 2016-2024\n"
 "Language-Team: Turkish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/tr/)\n"
 "Language: tr\n"
@@ -10517,9 +10517,9 @@ msgstr "Quicktime/MP4 okuyucusu: İz {0} bazı verisi eksik. Bozuk üstbilgi ato
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:202
 #: src/mkvtoolnix-gui/util/settings.cpp:319
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Quit MKVToolNix"
-msgstr "MKVToolNix &GKA"
+msgstr "MKVToolNix'ten Çık"
 
 #: src/common/file_types.cpp:79
 #, no-c-format
@@ -15944,9 +15944,9 @@ msgid "extended language subtags form"
 msgstr "genişletilmiş dil alt etiketleri biçimi"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:204
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "ffmpeg metadata files"
-msgstr "Ortam dosyalarını ilave et"
+msgstr "ffmpeg üstveri dosyaları"
 
 #: src/merge/output_control.cpp:429
 #, no-c-format, c++-format
