add program translation to Norwegian Bokmål by Roger Knutsen

--- a/AUTHORS
+++ b/AUTHORS
@@ -281,6 +281,9 @@ Robert Millan <rmh@aybabtu.com>
 Roberto Boriotti <Roberto.Boriotti@canon-europe.com>
     * Italian translation
 
+Roger Knutsen <kalimalenia@proton.me>
+    * Norwegian Bokmål translation
+
 Roman Babiy <babiyr@gmail.com>
     * Ukrainian translation
 
