program translations: update Belarusian

--- a/po/be.po
+++ b/po/be.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 82.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-03-11 20:00+0100\n"
-"PO-Revision-Date: 2024-01-20 18:20+0100\n"
-"Last-Translator: Prydespar <prydespar@gmail.com>, 2021,2023\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Prydespar <prydespar@gmail.com>, 2024\n"
 "Language-Team: Belarusian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/be/)\n"
 "Language: be\n"
 "MIME-Version: 1.0\n"
@@ -792,6 +792,8 @@ msgid ""
 "  --regenerate-track-uids  Generate new random track UIDs instead of keeping\n"
 "                           existing ones.\n"
 msgstr ""
+"  --regenerate-track-uids  Ствараць новыя выпадковыя UID трэкаў замест\n"
+"                           захоўвання існуючых.\n"
 
 #: src/merge/mkvmerge.cpp:286
 #, no-c-format
@@ -1602,9 +1604,9 @@ msgstr[3] "%1 запісаў"
 msgid "%1 error"
 msgid_plural "%1 errors"
 msgstr[0] "%1 памылка"
-msgstr[1] "%1 ошибки"
-msgstr[2] "%1 ошибок"
-msgstr[3] "%1 ошибок"
+msgstr[1] "%1 памылкі"
+msgstr[2] "%1 памылак"
+msgstr[3] "%1 памылак"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:142
 #: src/mkvtoolnix-gui/merge/select_playlist_dialog.cpp:118
@@ -10580,9 +10582,9 @@ msgstr "Чытальнік Quicktime/MP4: у трэку {0} адсутнічаю
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:202
 #: src/mkvtoolnix-gui/util/settings.cpp:319
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Quit MKVToolNix"
-msgstr "MKVToolNix &GUI"
+msgstr "Выйсці з MKVToolNix"
 
 #: src/common/file_types.cpp:79
 #, no-c-format
@@ -16050,9 +16052,9 @@ msgid "extended language subtags form"
 msgstr "форма пашыранага моўнага падтэга"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:204
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "ffmpeg metadata files"
-msgstr "Усе падтрымліваныя медыяфайлы"
+msgstr "файлы метадаты ffmpeg"
 
 #: src/merge/output_control.cpp:429
 #, no-c-format, c++-format
