man page translations: update Belarusian

--- a/doc/man/po4a/po/be.po
+++ b/doc/man/po4a/po/be.po
@@ -34,10 +34,8 @@ msgstr "83.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2024-01-02"
 msgid "2024-03-10"
-msgstr "2024-01-02"
+msgstr "2024-03-10"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -2829,20 +2827,18 @@ msgstr "Не капіяваць глабальныя тэгі з гэтага ф
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1402
-#, fuzzy
-#| msgid "<option>--enable-durations</option>"
 msgid "<option>--regenerate-track-uids</option>"
-msgstr "<option>--enable-durations</option>"
+msgstr "<option>--regenerate-track-uids</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1405
 msgid "When this option is used for a Matroska source file, &mkvmerge; will create new random unique track IDs instead of keeping the existing ones in the file. Existing track UIDs in chapters &amp; tags read from the same file will be remapped to the newly generated values."
-msgstr ""
+msgstr "Калі гэты параметр ужыты для зыходнага файла Matroska, &mkvmerge; будзе ствараць новыя выпадковыя ўнікальныя ідэнтыфікатары трэкаў замест захавання існуючых у файле. Існуючыя UID трэкаў у раздзелах і трэках, счытаных з таго ж файла, будуць нанава счытныя для новых створаных значэнняў."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1411
 msgid "This behavior is enabled automatically for Matroska files created by the MakeMKV software. The reason is that MakeMKV uses consecutive numbers (1, 2, 3…) as UIDs instead of generating random ones."
-msgstr ""
+msgstr "Гэтыя паводзіны аўтаматычна ўключаюцца для файлаў Matroska, створаных праграмай MakeMKV. Прычына ў тым, што MakeMKV выкарыстоўвае паслядоўныя лікі (1, 2, 3…) у якасці UID замест стварэння выпадковых."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1418
