program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-03-11 20:00+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2023\n"
+"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2024\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/ca/)\n"
 "Language: ca\n"
@@ -507,7 +507,7 @@ msgid ""
 "                           attachments as well as for existing ones.\n"
 msgstr ""
 "  --enable-legacy-font-mime-types\n"
-"                           Usa els tipus MIME de lletra llegats quan s'afegeixen\n"
+"                           Usa els tipus MIME de lletra heretats quan s'afegeixen\n"
 "                           adjunts nous, així com per als existents.\n"
 
 #: src/merge/mkvmerge.cpp:417
@@ -835,6 +835,8 @@ msgid ""
 "  --regenerate-track-uids  Generate new random track UIDs instead of keeping\n"
 "                           existing ones.\n"
 msgstr ""
+"  --regenerate-track-uids  Genera de forma aleatòria UID nous de seguiment\n"
+"                           en comptes mantenir els existents.\n"
 
 #: src/merge/mkvmerge.cpp:286
 #, no-c-format
@@ -10601,9 +10603,9 @@ msgstr "Lector de Quicktime/MP4: A la pista {0} li manquen algunes dades. Estan 
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:202
 #: src/mkvtoolnix-gui/util/settings.cpp:319
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Quit MKVToolNix"
-msgstr "I&GU del MKVToolNix"
+msgstr "Surt del MKVToolNix"
 
 #: src/common/file_types.cpp:79
 #, no-c-format
@@ -16031,9 +16033,9 @@ msgid "extended language subtags form"
 msgstr "Forma de subetiquetes en idioma estès"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:204
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "ffmpeg metadata files"
-msgstr "Annexa alguns fitxers de suports"
+msgstr "Fitxers de metadades del FFmpeg"
 
 #: src/merge/output_control.cpp:429
 #, no-c-format, c++-format
