man page translations: update Catalan

--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -38,10 +38,8 @@ msgstr "83.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2024-01-02"
 msgid "2024-03-10"
-msgstr "02/01/2024"
+msgstr "10/03/2024"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -2641,12 +2639,12 @@ msgstr "<option>--enable-legacy-font-mime-types</option>"
 #: doc/man/mkvmerge.xml:1180
 #: doc/man/mkvpropedit.xml:363
 msgid "Enables the use of legacy <abbrev>MIME</abbrev> types for certain types of font attachments. For example, '<literal>application/x-truetype-font</literal>' will be used for TrueType fonts instead of '<literal>fonts/ttf</literal>'."
-msgstr "Permet l'ús de tipus <abbrev>MIME</abbrev> llegats per a determinats tipus d'adjunts de lletra tipogràfica. Per exemple, s'usarà «<literal>application/x-truetype-font</literal>» per a les lletres TrueType en lloc de «<literal>fonts/ttf</literal>»."
+msgstr "Permet l'ús de tipus <abbrev>MIME</abbrev> heretats per a determinats tipus d'adjunts de lletra tipogràfica. Per exemple, s'usarà «<literal>application/x-truetype-font</literal>» per a les lletres TrueType en lloc de «<literal>fonts/ttf</literal>»."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1185
 msgid "This affects both new attachments if its <abbrev>MIME</abbrev> type is detected automatically and existing attachments whose stored <abbrev>MIME</abbrev> types will be remapped to the legacy ones."
-msgstr "Això afectarà dos adjunts nous si el seu tipus <abbrev>MIME</abbrev> es detecta automàticament i els adjunts existents del tipus <abbrev>MIME</abbrev> emmagatzemat seran reassignats al llegat."
+msgstr "Això afectarà dos adjunts nous si el seu tipus <abbrev>MIME</abbrev> es detecta automàticament i els adjunts existents del tipus <abbrev>MIME</abbrev> emmagatzemat seran reassignats a l'heretat."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1190
@@ -2833,20 +2831,18 @@ msgstr "No copiar cap etiqueta global des d'aquest fitxer."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1402
-#, fuzzy
-#| msgid "<option>--enable-durations</option>"
 msgid "<option>--regenerate-track-uids</option>"
-msgstr "<option>--enable-durations</option>"
+msgstr "<option>--regenerate-track-uids</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1405
 msgid "When this option is used for a Matroska source file, &mkvmerge; will create new random unique track IDs instead of keeping the existing ones in the file. Existing track UIDs in chapters &amp; tags read from the same file will be remapped to the newly generated values."
-msgstr ""
+msgstr "Quan utilitzeu aquesta opció per a un fitxer font Matroska, el &mkvmerge; crearà ID nous de pista únics i aleatoris en lloc de mantenir els existents al fitxer. Els UID de seguiment existents en capítols i les etiquetes llegides des del mateix fitxer es reassignaran als valors recentment generats."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1411
 msgid "This behavior is enabled automatically for Matroska files created by the MakeMKV software. The reason is that MakeMKV uses consecutive numbers (1, 2, 3…) as UIDs instead of generating random ones."
-msgstr ""
+msgstr "Aquest comportament s'habilita automàticament per als fitxers Matroska creats pel programari MakeMKV. El motiu és que el MakeMKV utilitza números consecutius (1, 2, 3...) com a UID en lloc de generar-ne aleatoris."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1418
@@ -5237,7 +5233,7 @@ msgstr "Altres opcions:"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvpropedit.xml:390
 msgid "Normally when the user requests changes to the '<literal>language</literal>' track header property, &mkvpropedit; will apply the same change to the new <classname>LanguageIETF</classname> track header element in addition to the legacy <classname>Language</classname> element. If this option is used, the change is only applied to the legacy <classname>Language</classname> element."
-msgstr "Normalment, quan l'usuari sol·licita canvis en la propietat de la capçalera «<literal>Language</literal>» de la pista, el &mkvpropedit; aplicarà el mateix canvi al nou element de la capçalera <classname>LanguageIETF</classname> de la pista a més de l'element <classname>Language</classname> heretat. Si s'utilitza aquesta opció, el canvi només s'aplicarà a l'element <classname>Language</classname> heretat."
+msgstr "Normalment, quan l'usuari sol·licita canvis en la propietat de la capçalera «<literal>Language</literal>» de la pista, el &mkvpropedit; aplicarà el mateix canvi a l'element nou de la capçalera <classname>LanguageIETF</classname> de la pista a més de l'element <classname>Language</classname> heretat. Si s'utilitza aquesta opció, el canvi només s'aplicarà a l'element <classname>Language</classname> heretat."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvpropedit.xml:396
